Add footer translations from JSON files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -140,5 +140,12 @@
       "subject": "Subject with minimum 2 characters",
       "message": "Message required"
     }
+  },
+  "footer": {
+    "icons": {
+      "github": "Github logo",
+      "linkedin": "Linkedin logo"
+    },
+    "captcha": "This site is protected by reCAPTCHA and the Google"
   }
 }
