Add error handler on contact form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -138,7 +138,8 @@
     },
     "buttons": {
       "send": "Send",
-      "sending": "Sending"
+      "sending": "Sending",
+      "error": "Server error. Please contact me at"
     }
   },
   "footer": {
