--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -138,7 +138,8 @@
     },
     "buttons": {
       "send": "Enviar",
-      "sending": "Enviando"
+      "sending": "Enviando",
+      "error": "Error del servidor. Por favor, contacte conmigo a"
     }
   },
   "footer": {
