--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,8 +8,8 @@
           "link": "https://www.capgemini.com/",
           "icons": ["javascript", "node", "aws", "dynamo"],
           "paragraphs": [
-            "I now work for a French company called Capgemini. The site is great, and it allows me to do such cool things as carry out projects alone or together with colleagues who are just as good or even better than me.",
-            "Tasks that I usually carry out are the implementation and improvement of functionalities in the back part of projects of great importance. The technology that I use the most is NodeJS on the server part together with Express in most cases. But in some other ways, I use cutting-edge technologies such as serverless with AWS lambdas."
+            "I'm now working for a French company called Capgemini. It is a great place, and it allows me to do such cool things as carry out projects alone or together with colleagues who are just as good or even better than me.",
+            "The tasks that I usually carry out are the implementation and improvement of functionalities in the back part of projects of great importance. The technology that I use the most is NodeJS on the server part with Express in most cases. But in some other ways, I use cutting-edge technologies such as serverless with AWS lambdas."
           ]
         },
         {
@@ -18,8 +18,8 @@
           "link": "https://teralco.com/",
           "icons": ["javascript", "typescript", "node", "mongo", "angular"],
           "paragraphs": [
-            "But before that I was in a Spanish company from Elche named Teralco. A place where I noticed how my programming skills took a colossal leap. The company's level of concern for its employees was what they cared about the most.",
-            "And what was I doing during my stay in this company? Well, true wonders. From the creation of a server for a US client in the medical sector with NodeJS, ExpressJS and MongoDB to revamping Paco Rabanne's frontend with Angular. Not everything is backend."
+            "Before that I was in a Spanish company from Elche named Teralco. In this place I noticed how my programming skills took a colossal leap. The company's level of concern for its employees was great, it was what they cared about the most.",
+            "And what was I doing during my stay in this company? Well, true wonders. From the creation of a server for a US client in the medical sector with NodeJS, ExpressJS and MongoDB to revamping Paco Rabanne's frontend with Angular. Not everything I do is backend."
           ]
         },
         {
@@ -39,8 +39,8 @@
             "python"
           ],
           "paragraphs": [
-            "But was there something before? Yes, a company that opened its arms to me when I asked. I was young (wait, I'm still young) and inexperienced in the world of web development. But with an immense desire to learn, NTT Data welcomed me like a son.",
-            "Here I had real challenges ahead. I was assigned to incredible projects with a myriad of technologies. I was able to improve in NodeJS with Express, I used MongoDB, PostgreSQL, DynamoDB, MySQL, Angular in the frontend and React in the mobile part, I learned to use Python to maintain ETLs and all that in an AWS cloud environment... It's a good bunch of technologies!"
+            "Was there something before? Yes, a company that opened its arms to me when I asked. I was young (wait, I'm still young) and inexperienced in the world of web development. But with an immense desire to learn, NTT Data welcomed me like a son.",
+            "There I had real challenges ahead. I was assigned to incredible projects with a myriad of technologies. I was able to improve in NodeJS with Express, I used MongoDB, PostgreSQL, DynamoDB, MySQL, Angular in the frontend and React in the mobile part, I learned to use Python to maintain ETLs and all that in an AWS cloud environment... It's a good bunch of technologies!"
           ]
         },
         {
@@ -49,20 +49,20 @@
           "link": "https://www.loteriaelnegrito.com/",
           "icons": ["javascript", "typescript", "node", "mysql", "angular"],
           "paragraphs": [
-            "And we come to the beginning. Do you remember your first love? Well, this is similar. You are nervous about how it will turn out, you think if you are doing things right but you are willing to do your best and you have to start somewhere. That is what happened to me in Lotería el Negrito. In this place I take the best memories with unforgettable colleagues. I love you guys!",
-            "When you look back and remember how it all started, at times you put your head in your hands but in general you remember everything with great affection. This is where I started working with Angular and NodeJS with ExpressJS, implementing features for projects of the company itself. A full-fledged startup. Here MySQL was the queen of databases. Typescript was a protagonist of half of these endearing projects."
+            "And we come to the beginning. Do you remember your first love? Well, this is similar. You are nervous about how it will turn out, you think if you are doing things right but you are willing to do your best and you have to start somewhere. That is what happened to me in Lotería el Negrito. In this place I have the best memories with unforgettable colleagues. I love you guys!",
+            "When you look back and remember how it all started, at times you put can't avoid to facepalm, but in general you remember everything with great affection. This is where I started working with Angular and NodeJS with ExpressJS, implementing features for projects of the company itself. A full-fledged startup. Here MySQL was the queen of databases. Typescript was a protagonist of half of these endearing projects."
           ]
         }
       ],
       "title": "Let's talk about work"
     },
     "now": {
-      "paragraph": "I live as a couple and I keep fit thanks to the best sport in the world: frontennis. I also like to write stories. Sometimes for my friends, other times for anyone and, very rarely, for myself. In fact, I'm going to tell you my story. But don't worry, it won't be long.",
+      "paragraph": "I live with my partner and I keep fit thanks to the best sport in the world: frontennis. I also like to write stories. Sometimes for my friends, other times for anyone and, very rarely, for myself. In fact, I'm going to tell you my story. But don't worry, it won't be long.",
       "title": "Currently..."
     },
     "presentation": [
-      "Boy from a town between the interior and the coast.",
-      "I'm a web developer in Spain. I love NodeJS. I love the backend",
+      "I'm a man from a town just an hour ago from the Mediterranean sea.",
+      "I'm a web developer in Spain. I love NodeJS and I love the backend",
       "I have been programming since 2019 and since 2020 I have dedicated myself to the backend more exhaustively."
     ],
     "title": "I'm Jerónimo Gascón",
@@ -74,10 +74,10 @@
           "date": "2019 - 2019",
           "link": "https://geekshubsacademy.com/",
           "paragraphs": [
-            "Everything I learned in a practical and business-oriented way was offered to me at this BootCamp in Spain: GeeksHubs. It was a unique and unforgettable opportunity and they were the ones who contacted me.",
+            "Everything I learned in a practical and business-oriented way was offered to me at this BootCamp in Spain: GeeksHubs Academy. It was a unique and unforgettable opportunity and a very fullfilling experience.",
             "There is a lot to tell here, since it was an intensive learning of 12 weeks. We studied the basics of the web with HTML and CSS3 and SCSS as a style preprocessor together with the logic with Javascript.",
             "We built a backend with Node.JS and Express.JS together with the Handlebars template engine. We used relational databases with MySQL with the Sequalize ORM and non-relational with MongoDB and the Mongoose ORM. Together with the backend we created several frontends with React and a little bit of Redux and Angular 2+ together with Typescript.",
-            "Moving away from the code, we practiced Git and used the GitHub cloud repository and, finally, we were studying and practicing every day the agile methodology SCRUM.",
+            "We did not only learn about code, we also practiced Git and used the GitHub cloud repository and, finally, we were studying and practicing every day the agile methodology SCRUM.",
             "Now that I see it all together and closely, we did a lot of things!"
           ],
           "icons": [
@@ -104,7 +104,7 @@
           "link": "https://iessanvicente.com/alu/daw/index.php",
           "paragraphs": [
             "And, finally, we end up at the beginning of the story. My first experience with programming was when I was young (even more so if possible) in the Advanced degree course in web programming at IES San Vicente, where I was able to access an official degree in this subject.",
-            "What I was able to study here was quite varied, among other things, Java or PHP, but they remained mere teachings and theories, since I have never done any work in companies that needed them. But in the web part of the second year we saw HTML and CSS, relational databases with MySQL, Javascript and some DevOps practice but, as I mentioned with Java or PHP, it was left in the notes."
+            "What I was able to study here was quite varied, among other things, Java or PHP, but they remained mere teachings and theories, since I have never done any work in companies that needed them. But in the web part of the second year we saw HTML and CSS, relational databases with MySQL, Javascript and some DevOps practice but, as I mentioned with Java or PHP, it was jus theory."
           ],
           "icons": ["html", "css", "mysql", "javascript"]
         }
