U - Add avatar img translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "home": {
+    "avatarImage": "Photo of Jerónimo Gascón Sánchez on the right looking at the camera and smiling next to another image on the left with the Javascript and Typescript icons",
     "jobs": {
       "jobs": [
         {
