--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,6 @@
 {
   "home": {
+    "avatarImage": "Fotografía de Jerónimo Gascón Sánchez a la derecha mirando a cámara y sonriendo junto a otra imagen a la izquierda con los iconos de Javascript y Typescript",
     "jobs": {
       "jobs": [
         {
