Fix punctuation in presentation text

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -84,7 +84,7 @@
     },
     "presentation": [
       "I'm a man from a town just an hour ago from the Mediterranean sea.",
-      "I'm a web developer in Spain. I love NodeJS and I love the backend",
+      "I'm a web developer in Spain. I love NodeJS and I love the backend.",
       "I have been programming since 2019 and since 2020 I have dedicated myself to the backend more exhaustively."
     ],
     "title": "I'm Jerónimo Gascón",
