--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -84,7 +84,7 @@
     },
     "presentation": [
       "Chico de un pueblo entre el interior y la costa.",
-      "Soy desarrollador web en España. Me encanta NodeJS. Me encanta el backend.\"",
+      "Soy desarrollador web en España. Me encanta NodeJS. Me encanta el backend.",
       "Llevo desde el 2019 programando y desde el 2020 me he dedicado al backend más exhaustivamente."
     ],
     "title": "Soy Jerónimo Gascón",
